test/files/neg/xmlcorner.scala
class foo {
      val wrong = <:bla/>
}
class bar {
      val wrong = <bla:  />
}
