test/files/neg/xmlcorner.check
xmlcorner.scala:2: error: illegal start of simple expression
      val wrong = <:bla/>
                  ^
xmlcorner.scala:5: error: in XML literal: name cannot end in ':'
      val wrong = <bla:  />
                       ^
two errors found
